--- a/Receiver.ioc
+++ b/Receiver.ioc
@@ -30,7 +30,7 @@ Mcu.IP1=DMA
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=TIM2
+Mcu.IP5=TIM1
 Mcu.IP6=USART1
 Mcu.IPNb=7
 Mcu.Name=STM32F103C(4-6)Tx
@@ -38,7 +38,7 @@ Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
 Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin11=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin11=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PA1
 Mcu.Pin3=PA2
 Mcu.Pin4=PB15
@@ -64,6 +64,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA1.GPIOParameters=GPIO_Label
@@ -162,10 +163,14 @@ SH.GPXTI10.0=GPIO_EXTI10
 SH.GPXTI10.ConfNb=1
 SH.GPXTI15.0=GPIO_EXTI15
 SH.GPXTI15.ConfNb=1
+TIM1.IPParameters=TIM_MasterOutputTrigger,Prescaler,Period
+TIM1.Period=19
+TIM1.Prescaler=71
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=custom
