--- a/Receiver.ioc
+++ b/Receiver.ioc
@@ -31,23 +31,28 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=USART1
+Mcu.IPNb=9
 Mcu.Name=STM32F103C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin11=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin10=PB7
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA1
 Mcu.Pin3=PA2
-Mcu.Pin4=PB15
-Mcu.Pin5=PA10
-Mcu.Pin6=PA13
-Mcu.Pin7=PA14
-Mcu.Pin8=PB6
-Mcu.Pin9=PB7
-Mcu.PinsNb=12
+Mcu.Pin4=PB0
+Mcu.Pin5=PB15
+Mcu.Pin6=PA10
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PB6
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Tx
@@ -83,6 +88,11 @@ PA14.Signal=SYS_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=ITSR
 PA2.Signal=ADCx_IN2
+PB0.GPIOParameters=GPIO_Speed,GPIO_Label
+PB0.GPIO_Label=LED
+PB0.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB0.Locked=true
+PB0.Signal=S_TIM3_CH3
 PB15.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PB15.GPIO_Label=SEQR
 PB15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
@@ -132,7 +142,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
@@ -163,14 +173,22 @@ SH.GPXTI10.0=GPIO_EXTI10
 SH.GPXTI10.ConfNb=1
 SH.GPXTI15.0=GPIO_EXTI15
 SH.GPXTI15.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
 TIM1.IPParameters=TIM_MasterOutputTrigger,Prescaler,Period
 TIM1.Period=19
 TIM1.Prescaler=71
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.IPParameters=Channel-PWM Generation3 CH3
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
