--- a/Receiver.ioc
+++ b/Receiver.ioc
@@ -180,7 +180,10 @@ TIM1.Period=19
 TIM1.Prescaler=71
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM3.IPParameters=Channel-PWM Generation3 CH3
+TIM3.IPParameters=Channel-PWM Generation3 CH3,Prescaler,Period,Pulse-PWM Generation3 CH3
+TIM3.Period=999
+TIM3.Prescaler=71
+TIM3.Pulse-PWM\ Generation3\ CH3=500
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
