--- a/Receiver.ioc
+++ b/Receiver.ioc
@@ -179,6 +179,9 @@ TIM1.IPParameters=TIM_MasterOutputTrigger,Prescaler,Period
 TIM1.Period=19
 TIM1.Prescaler=71
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM2.IPParameters=Prescaler,Period
+TIM2.Period=10000-1
+TIM2.Prescaler=71
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.IPParameters=Channel-PWM Generation3 CH3,Prescaler,Period,Pulse-PWM Generation3 CH3
 TIM3.Period=999
