--- a/Receiver.ioc
+++ b/Receiver.ioc
@@ -43,7 +43,8 @@ Mcu.Pin10=PB7
 Mcu.Pin11=VP_SYS_VS_Systick
 Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin14=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM2_VS_OPM
+Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA1
 Mcu.Pin3=PA2
 Mcu.Pin4=PB0
@@ -52,7 +53,7 @@ Mcu.Pin6=PA10
 Mcu.Pin7=PA13
 Mcu.Pin8=PA14
 Mcu.Pin9=PB6
-Mcu.PinsNb=15
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Tx
@@ -70,6 +71,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA1.GPIOParameters=GPIO_Label
@@ -179,9 +181,11 @@ TIM1.IPParameters=TIM_MasterOutputTrigger,Prescaler,Period
 TIM1.Period=19
 TIM1.Prescaler=71
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
-TIM2.IPParameters=Prescaler,Period
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger
 TIM2.Period=10000-1
 TIM2.Prescaler=71
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.IPParameters=Channel-PWM Generation3 CH3,Prescaler,Period,Pulse-PWM Generation3 CH3
 TIM3.Period=999
@@ -195,6 +199,8 @@ VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM2_VS_OPM.Mode=OPM_bit
+VP_TIM2_VS_OPM.Signal=TIM2_VS_OPM
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
